# energy_shop

./: .gitpod.Dockerfile  .gitpod.yml  Dockerfile  README.md  entrypoint.sh  pyproject.toml
_archive/specs/: webshop.md
client/: package.json  vue.config.js
client/public/: index.html
client/src/: App.vue
client/src/components/: Footer.vue  InputBlock.vue  Layout.vue  Logo.vue
client/src/components/SwapForm/: AmountInput.vue
client/src/plugins/: axios.ts
client/src/router/: index.ts
client/src/store/: index.ts
client/src/utils/: getCoinName.ts
client/src/views/: PageNotFound.vue  PayForm.vue  SwapForm.vue  Terms.vue
docs/concepts/: bitcoinadresses.md  services.md
helmcharts/tftshop/: Chart.yaml  values.yaml
helmcharts/tftshop/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
helmcharts/tftshop/templates/tests/: test-connection.yaml
