[tool.poetry]
name = "tftshop"
packages = [{ include = "jumpscale" }]
version = "0.1.0"
description = ""
authors = ["MohamedElmdary <engm5081@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
js-sdk = "^11.5b8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
